@@ -1,5 +1,6 @@
 package com.lunarclient.apollo.example.modules;
 
+import com.google.common.collect.Lists;
 import com.lunarclient.apollo.Apollo;
 import com.lunarclient.apollo.common.Component;
 import com.lunarclient.apollo.module.nametag.Nametag;
@@ -7,9 +8,9 @@ import com.lunarclient.apollo.module.nametag.NametagModule;
 import com.lunarclient.apollo.player.ApolloPlayer;
 import org.bukkit.entity.Player;
 
-import java.awt.Color;
+import java.awt.*;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
 
 public class NametagExample {
@@ -20,10 +21,10 @@ public class NametagExample {
         Collection<ApolloPlayer> viewers = Apollo.getPlayerManager().getPlayers();
 
         this.nametagModule.overrideNametag(viewers, target.getUniqueId(), Nametag.builder()
-                .lines(List.of(
+                .lines(Lists.newArrayList(
                     Component.builder()
                         .content("[StaffMode]")
-                        .decorators(List.of(Component.TextDecorators.ITALIC))
+                        .decorators(Collections.singletonList(Component.TextDecorators.ITALIC))
                         .color(Color.GRAY)
                         .build(),
                     Component.builder()
